@@ -1,3 +1,9 @@
+2007-08-23  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-info.c: (gnome_theme_is_writable): cast to proper type
+	* theme-thumbnail.c: (create_metacity_theme_pixbuf): free the metacity
+	theme after use (bug #469531)
+
 2007-08-21  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (gnome_theme_info_find_by_type_helper):
